samples/_failures_safe/1761347253_a16b5c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b1e7f51f.c: In function ‘main’:
./samples/SAFE/__tmp_b1e7f51f.c:147:12: error: missing terminating " character
  147 |     printf("\nMatrix 1:\
      |            ^~~~~~~~~~~~~
./samples/SAFE/__tmp_b1e7f51f.c:147:5: error: expected expression at end of input
  147 |     printf("\nMatrix 1:\
      |     ^~~~~~
./samples/SAFE/__tmp_b1e7f51f.c:147:5: error: expected declaration or statement at end of input
